--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -1,28 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <include
-        layout="@layout/layout_content_home"
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <android.support.design.widget.NavigationView
-        android:id="@+id/nav_view_left"
-        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/layout_nav_header"
-        app:menu="@menu/menu_nav_drawer_left"
-        app:itemIconTint="@color/colorGrey"
-        android:background="#FEEFF2"
-        app:itemTextColor="@color/colorGrey"/>
+        tools:openDrawer="start">
 
-</android.support.v4.widget.DrawerLayout>
+        <include
+            android:id="@+id/dashboard"
+            layout="@layout/layout_content_home" />
+
+        <android.support.design.widget.NavigationView
+            android:id="@+id/nav_view_left"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:background="#FEEFF2"
+            android:fitsSystemWindows="true"
+            app:headerLayout="@layout/layout_nav_header"
+            app:itemIconTint="@color/colorGrey"
+            app:itemTextColor="@color/colorGrey"
+            app:menu="@menu/menu_nav_drawer_left" />
+
+    </android.support.v4.widget.DrawerLayout>
+</layout>
