--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -1,66 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/root_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorBackground"
-    android:orientation="vertical">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <include layout="@layout/layout_app_toolbar" />
-
-    <android.support.v4.widget.NestedScrollView
-        android:id="@+id/order_details_wrapper"
+    <LinearLayout
+        android:id="@+id/root_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:layout_height="match_parent"
+        android:background="@color/colorBackground"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <include
+            android:id="@+id/lt_toolbar"
+            layout="@layout/layout_app_toolbar" />
+
+        <android.support.v4.widget.NestedScrollView
+            android:id="@+id/order_details_wrapper"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingStart="@dimen/dp16"
-            android:paddingEnd="@dimen/dp16">
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <TextView
-                style="@style/TextTheme.Title.Black"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/order_details" />
+                android:orientation="vertical"
+                android:paddingEnd="@dimen/dp16"
+                android:paddingStart="@dimen/dp16">
 
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardBackgroundColor="@color/colorWhite"
-                app:cardCornerRadius="@dimen/cardview_default_corner_radius"
-                app:cardElevation="@dimen/cardview_default_elavation">
+                <TextView
+                    style="@style/TextTheme.Title.Black"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/order_details" />
 
-                <include layout="@layout/layout_order_details"/>
-            </android.support.v7.widget.CardView>
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:cardBackgroundColor="@color/colorWhite"
+                    app:cardCornerRadius="@dimen/cardview_default_corner_radius"
+                    app:cardElevation="@dimen/cardview_default_elavation">
 
-            <TextView
-                android:id="@+id/textView"
-                style="@style/TextTheme.Title.Black"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/order_items"
-                android:gravity="center"/>
+                    <include
+                        android:id="@+id/lt_order_details"
+                        layout="@layout/layout_order_details" />
+                </android.support.v7.widget.CardView>
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/order_detail_recycler_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/textView"
+                    style="@style/TextTheme.Title.Black"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/order_items" />
 
-        </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/order_detail_recycler_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:indeterminate="true"
-        android:visibility="gone"/>
+            </LinearLayout>
+        </android.support.v4.widget.NestedScrollView>
 
-</LinearLayout>
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:indeterminate="true"
+            android:visibility="gone" />
+
+    </LinearLayout>
+</layout>
