--- a/app/src/main/res/layout/expandible_group_item.xml
+++ b/app/src/main/res/layout/expandible_group_item.xml
@@ -1,36 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorWhite"
-        android:padding="@dimen/dp10">
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/help_group_indicator"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:src="@drawable/ic_add" />
-
-        <TextView
-            android:id="@+id/question"
-            style="@style/TextTheme.Label.Black"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_toStartOf="@id/help_group_indicator"
-            android:textSize="@dimen/sp15" />
+            android:background="@color/colorWhite"
+            android:padding="@dimen/dp10">
 
-    </RelativeLayout>
+            <ImageView
+                android:id="@+id/help_group_indicator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:src="@drawable/ic_add" />
 
-    <View
-        android:id="@+id/group_divider_blank"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp20"
-        android:background="@color/colorBackground"/>
-</LinearLayout>
+            <TextView
+                android:id="@+id/question"
+                style="@style/TextTheme.Label.Black"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_toStartOf="@id/help_group_indicator"
+                android:textSize="@dimen/sp15" />
+
+        </RelativeLayout>
+
+        <View
+            android:id="@+id/group_divider_blank"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp20"
+            android:background="@color/colorBackground" />
+    </LinearLayout>
+</layout>
