--- a/app/src/main/res/layout/fragment_completed_order.xml
+++ b/app/src/main/res/layout/fragment_completed_order.xml
@@ -1,65 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/root_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <RelativeLayout
-        android:id="@+id/search_container"
+        android:id="@+id/root_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/dp16"
-        android:layout_marginStart="@dimen/dp16"
-        android:layout_marginTop="@dimen/dp16"
-        android:orientation="horizontal"
-        android:background="@drawable/rounded_corner_white_fill"
-        android:padding="@dimen/dp10">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/image_view_date_range"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_date_picker"
-            android:layout_gravity="center"
-            android:layout_alignParentStart="true"/>
-
-        <ImageView
-            android:id="@+id/image_view_close"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_close_primary"
-            android:layout_alignParentEnd="true"
-            android:visibility="gone"/>
-
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/text_date_range"
+        <RelativeLayout
+            android:id="@+id/search_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Search from/to orders."
-            android:textColorHint="@color/black_overlay"
-            android:focusableInTouchMode="false"
-            android:focusable="false"
-            android:paddingStart="@dimen/dp5"
-            android:paddingEnd="@dimen/dp5"
-            android:textColor="@color/black_overlay"
-            android:cursorVisible="false"
-            android:background="@android:color/transparent"
-            android:layout_toEndOf="@id/image_view_date_range"
-            android:layout_toStartOf="@id/image_view_close"/>
+            android:layout_marginEnd="@dimen/dp16"
+            android:layout_marginStart="@dimen/dp16"
+            android:layout_marginTop="@dimen/dp16"
+            android:background="@drawable/rounded_corner_white_fill"
+            android:orientation="horizontal"
+            android:padding="@dimen/dp10">
+
+            <ImageView
+                android:id="@+id/image_view_date_range"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_date_picker" />
+
+            <ImageView
+                android:id="@+id/image_view_close"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:src="@drawable/ic_close_primary"
+                android:visibility="gone" />
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/text_date_range"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@id/image_view_date_range"
+                android:layout_toStartOf="@id/image_view_close"
+                android:background="@android:color/transparent"
+                android:cursorVisible="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:hint="Search from/to orders."
+                android:paddingEnd="@dimen/dp5"
+                android:paddingStart="@dimen/dp5"
+                android:textColor="@color/black_overlay"
+                android:textColorHint="@color/black_overlay" />
+
+        </RelativeLayout>
+
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_refresh_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/search_container"
+            android:layout_marginTop="@dimen/dp5">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/completed_order_recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </android.support.v4.widget.SwipeRefreshLayout>
 
     </RelativeLayout>
-
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_refresh_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/search_container"
-        android:layout_marginTop="@dimen/dp5">
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/completed_order_recyclerview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </android.support.v4.widget.SwipeRefreshLayout>
-
-</RelativeLayout>
+</layout>
