--- a/app/src/main/res/layout/fragment_sales_graph.xml
+++ b/app/src/main/res/layout/fragment_sales_graph.xml
@@ -1,28 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/root_layout"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:id="@+id/title_sales_graph"
-        style="@style/TextTheme.Title.Black"
+    <RelativeLayout
+        android:id="@+id/root_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/dp16"
-        android:gravity="center_horizontal"
-        android:text="Order Stats"
-        android:layout_alignParentTop="true"/>
+        android:layout_height="wrap_content">
 
-   <include layout="@layout/layout_todays_sales_report"/>
+        <TextView
+            android:id="@+id/title_sales_graph"
+            style="@style/TextTheme.Title.Black"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_margin="@dimen/dp16"
+            android:gravity="center_horizontal"
+            android:text="@string/sales_stat_title" />
 
-    <com.jjoe64.graphview.GraphView
-        android:id="@+id/graph_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/dp16"
-        android:visibility="gone"
-        android:layout_alignParentBottom="true"
-        android:layout_below="@id/title_sales_graph"/>
+        <include
+            android:id="@+id/lt_today_report"
+            layout="@layout/layout_todays_sales_report" />
 
-</RelativeLayout>
+        <com.jjoe64.graphview.GraphView
+            android:id="@+id/graph_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_below="@id/title_sales_graph"
+            android:layout_margin="@dimen/dp16"
+            android:visibility="gone" />
+
+    </RelativeLayout>
+</layout>
