--- a/app/src/main/res/layout/fragment_update_profile.xml
+++ b/app/src/main/res/layout/fragment_update_profile.xml
@@ -1,67 +1,75 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/outer_wrapper"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ScrollView
+    <FrameLayout
+        android:id="@+id/outer_wrapper"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fadeScrollbars="false"
-        android:padding="@dimen/dp16">
+        android:layout_height="match_parent">
 
-        <LinearLayout
-            android:id="@+id/register_wrapper"
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fitsSystemWindows="true"
-            android:orientation="vertical"
-            android:visibility="visible">
-
-
-            <include layout="@layout/layout_register" />
+            android:fadeScrollbars="false"
+            android:padding="@dimen/dp16">
 
             <LinearLayout
+                android:id="@+id/register_wrapper"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/dp16"
-                android:orientation="horizontal"
-                android:weightSum="2">
+                android:fitsSystemWindows="true"
+                android:orientation="vertical"
+                android:visibility="visible">
 
-                <Button
-                    android:id="@+id/btn_update"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@drawable/button_transparent"
-                    android:text="@string/lbl_update"
-                    android:layout_marginEnd="@dimen/dp10"/>
+                <include
+                    android:id="@+id/register"
+                    layout="@layout/layout_register" />
 
-                <Button
-                    android:id="@+id/btn_cancel"
-                    android:layout_width="0dp"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dp10"
-                    android:layout_weight="1"
-                    android:background="@drawable/button_transparent"
-                    android:text="@string/lbl_cancel" />
+                    android:layout_margin="@dimen/dp16"
+                    android:orientation="horizontal"
+                    android:weightSum="2">
+
+                    <Button
+                        android:id="@+id/btn_update"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/dp10"
+                        android:layout_weight="1"
+                        android:background="@drawable/button_transparent"
+                        android:onClick="onClickUpdate"
+                        android:text="@string/lbl_update" />
+
+                    <Button
+                        android:id="@+id/btn_cancel"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/dp10"
+                        android:layout_weight="1"
+                        android:background="@drawable/button_transparent"
+                        android:onClick="onClickCancel"
+                        android:text="@string/lbl_cancel" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
-        </LinearLayout>
+        </ScrollView>
 
-    </ScrollView>
+        <!-- This FrameLayout insets its children based on system windows using
+        android:fitsSystemWindows. -->
+        <FrameLayout
+            android:id="@+id/fl_no_internet"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            android:visibility="gone">
 
-    <!-- This FrameLayout insets its children based on system windows using
-    android:fitsSystemWindows. -->
-    <FrameLayout
-        android:id="@+id/fl_no_internet"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
-        android:visibility="gone">
+            <include
+                android:id="@+id/lt_no_internet"
+                layout="@layout/layout_no_internet" />
 
-        <include layout="@layout/layout_no_internet" />
+        </FrameLayout>
 
     </FrameLayout>
-
-</FrameLayout>
+</layout>
