--- a/app/src/main/res/layout/layout_content_home.xml
+++ b/app/src/main/res/layout/layout_content_home.xml
@@ -1,24 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    tools:context="com.flowercentral.flowercentralbusiness.dashboard.DashboardActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <include layout="@layout/layout_app_toolbar" />
-
-    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/nav_content_wrapper"
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="?actionBarSize"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="com.flowercentral.flowercentralbusiness.dashboard.DashboardActivity"
-        tools:showIn="@layout/layout_app_toolbar">
+        android:layout_height="wrap_content"
+        tools:context="com.flowercentral.flowercentralbusiness.dashboard.DashboardActivity">
 
-    </android.support.constraint.ConstraintLayout>
+        <include
+            android:id="@+id/lt_toolbar"
+            layout="@layout/layout_app_toolbar" />
 
-</android.support.design.widget.CoordinatorLayout>
+        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/nav_content_wrapper"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="?actionBarSize"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            tools:context="com.flowercentral.flowercentralbusiness.dashboard.DashboardActivity"
+            tools:showIn="@layout/layout_app_toolbar">
+
+        </android.support.constraint.ConstraintLayout>
+
+    </android.support.design.widget.CoordinatorLayout>
+</layout>
