--- a/app/src/main/res/layout/layout_login.xml
+++ b/app/src/main/res/layout/layout_login.xml
@@ -1,61 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_alignParentStart="true"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
-    android:padding="@dimen/dp16">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <android.support.design.widget.TextInputLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/lbl_vendor_name">
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:padding="@dimen/dp16">
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/textview_vendor_name"
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableStart="@drawable/ic_vendor_name_white"
-            android:drawablePadding="@dimen/dp10"
-            android:imeOptions="actionNext"
-            android:maxLines="1"
-            android:inputType="text"/>
+            android:hint="@string/lbl_vendor_name">
 
-    </android.support.design.widget.TextInputLayout>
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/textview_vendor_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawablePadding="@dimen/dp10"
+                android:drawableStart="@drawable/ic_vendor_name_white"
+                android:imeOptions="actionNext"
+                android:inputType="text"
+                android:maxLines="1" />
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/lbl_password">
+        </android.support.design.widget.TextInputLayout>
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/textview_password"
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableStart="@drawable/ic_password_white"
-            android:drawablePadding="@dimen/dp10"
-            android:imeOptions="actionDone"
-            android:inputType="textPassword"
-            android:maxLines="1" />
+            android:hint="@string/lbl_password">
 
-    </android.support.design.widget.TextInputLayout>
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/textview_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawablePadding="@dimen/dp10"
+                android:drawableStart="@drawable/ic_password_white"
+                android:imeOptions="actionDone"
+                android:inputType="textPassword"
+                android:maxLines="1" />
 
-    <Button
-        android:id="@+id/btn_login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp32"
-        android:background="@drawable/button_transparent"
-        android:text="@string/lbl_login" />
+        </android.support.design.widget.TextInputLayout>
 
-    <TextView
-        android:id="@+id/textview_forgot_password"
-        style="@style/AppTheme.Label"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp16"
-        android:gravity="center"
-        android:text="@string/lbl_forgot_password" />
+        <Button
+            android:id="@+id/btn_login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp32"
+            android:background="@drawable/button_transparent"
+            android:onClick="loginSelected"
+            android:text="@string/lbl_login" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/textview_forgot_password"
+            style="@style/AppTheme.Label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp16"
+            android:gravity="center"
+            android:onClick="forgotPasswordSelected"
+            android:text="@string/lbl_forgot_password" />
+
+    </LinearLayout>
+</layout>
