--- a/app/src/main/res/layout/layout_register.xml
+++ b/app/src/main/res/layout/layout_register.xml
@@ -1,162 +1,181 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:fadeScrollbars="false">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
+    <data>
+
+        <variable
+            name="profile"
+            type="com.flowercentral.flowercentralbusiness.profile.model.ProfileDetails" />
+    </data>
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="@dimen/dp16">
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/lbl_vendor_name">
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/textview_vendor_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawablePadding="@dimen/dp10"
-                android:drawableStart="@drawable/ic_vendor_name_white"
-                android:imeOptions="actionNext"
-                android:inputType="text"
-                android:maxLines="1" />
-
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/lbl_vendor_tin">
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/textview_tin"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawablePadding="@dimen/dp10"
-                android:drawableStart="@drawable/ic_tin_white"
-                android:imeOptions="actionNext"
-                android:inputType="text"
-                android:maxLines="1" />
-
-        </android.support.design.widget.TextInputLayout>
+        android:fadeScrollbars="false">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:padding="@dimen/dp16">
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/lbl_address">
+                android:hint="@string/lbl_vendor_name">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/textview_address"
+                    android:id="@+id/textview_vendor_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawablePadding="@dimen/dp10"
-                    android:drawableStart="@drawable/ic_store_white"
+                    android:drawableStart="@drawable/ic_vendor_name_white"
                     android:imeOptions="actionNext"
-                    android:inputType="textPostalAddress"
-                    android:maxLines="1" />
+                    android:inputType="text"
+                    android:maxLines="1"
+                    android:text="@{profile.shopName}" />
+
             </android.support.design.widget.TextInputLayout>
 
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/lbl_vendor_tin">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/textview_tin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawablePadding="@dimen/dp10"
+                    android:drawableStart="@drawable/ic_tin_white"
+                    android:imeOptions="actionNext"
+                    android:inputType="text"
+                    android:maxLines="1"
+                    android:text="@{profile.tinNumber}" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/lbl_address">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/textview_address"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:drawablePadding="@dimen/dp10"
+                        android:drawableStart="@drawable/ic_store_white"
+                        android:imeOptions="actionNext"
+                        android:inputType="textPostalAddress"
+                        android:maxLines="1"
+                        android:text="@{profile.address}" />
+                </android.support.design.widget.TextInputLayout>
+
+            </LinearLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/lbl_city">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/textview_city"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawablePadding="@dimen/dp10"
+                    android:drawableStart="@drawable/ic_location_white"
+                    android:imeOptions="actionNext"
+                    android:inputType="text"
+                    android:maxLines="1"
+                    android:text="@{profile.city}" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/lbl_state">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/textview_state"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dp32"
+                    android:imeOptions="actionNext"
+                    android:inputType="text"
+                    android:maxLines="1"
+                    android:text="@{profile.state}" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/lbl_zip">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/textview_zip"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dp32"
+                    android:imeOptions="actionNext"
+                    android:inputType="number"
+                    android:maxLines="1"
+                    android:text="@{profile.pin}" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <TextView
+                android:id="@+id/text_view_locate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|center_vertical"
+                android:layout_marginTop="@dimen/dp16"
+                android:drawableEnd="@drawable/ic_location_red"
+                android:drawablePadding="@dimen/dp5"
+                android:text="@string/link_view_on_map"
+                android:onClick="locateAddressSelected"/>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/lbl_phone1">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/textview_phone1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawablePadding="@dimen/dp10"
+                    android:drawableStart="@drawable/ic_phone_white"
+                    android:imeOptions="actionNext"
+                    android:inputType="phone"
+                    android:maxLines="1"
+                    android:text="@{profile.phone1}" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/lbl_phone2">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/textview_phone2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dp32"
+                    android:imeOptions="actionNext"
+                    android:inputType="phone"
+                    android:maxLines="1"
+                    android:text="@{profile.phone2}" />
+
+            </android.support.design.widget.TextInputLayout>
         </LinearLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/lbl_city">
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/textview_city"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawablePadding="@dimen/dp10"
-                android:drawableStart="@drawable/ic_location_white"
-                android:imeOptions="actionNext"
-                android:inputType="text"
-                android:maxLines="1" />
-
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/lbl_state">
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/textview_state"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dp32"
-                android:imeOptions="actionNext"
-                android:inputType="text"
-                android:maxLines="1" />
-
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/lbl_zip">
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/textview_zip"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dp32"
-                android:imeOptions="actionNext"
-                android:inputType="number"
-                android:maxLines="1" />
-
-        </android.support.design.widget.TextInputLayout>
-
-        <TextView
-            android:id="@+id/text_view_locate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|center_vertical"
-            android:layout_marginTop="@dimen/dp16"
-            android:drawableEnd="@drawable/ic_location_red"
-            android:drawablePadding="@dimen/dp5"
-            android:text="@string/link_view_on_map" />
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/lbl_phone1">
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/textview_phone1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawablePadding="@dimen/dp10"
-                android:drawableStart="@drawable/ic_phone_white"
-                android:imeOptions="actionNext"
-                android:inputType="phone"
-                android:maxLines="1" />
-
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/lbl_phone2">
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/textview_phone2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dp32"
-                android:imeOptions="actionNext"
-                android:inputType="phone"
-                android:maxLines="1" />
-
-        </android.support.design.widget.TextInputLayout>
-    </LinearLayout>
-</ScrollView>
+    </ScrollView>
+</layout>
