--- a/app/src/main/res/layout/layout_todays_sales_report.xml
+++ b/app/src/main/res/layout/layout_todays_sales_report.xml
@@ -1,31 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/todays_sales_wrapper"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:visibility="visible"
-    android:layout_centerInParent="true"
-    android:layout_gravity="center">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:id="@+id/total_orders"
-        style="@style/TextTheme.Title.Black"
+    <LinearLayout
+        android:id="@+id/todays_sales_wrapper"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal" />
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        android:visibility="visible">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:src="@drawable/ic_wallet" />
+        <TextView
+            android:id="@+id/total_orders"
+            style="@style/TextTheme.Title.Black"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal" />
 
-    <TextView
-        android:id="@+id/total_sales"
-        style="@style/TextTheme.Title.Black"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/ic_wallet" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/total_sales"
+            style="@style/TextTheme.Title.Black"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal" />
+
+    </LinearLayout>
+</layout>
