--- a/app/src/main/res/layout/layout_upload_shop_details.xml
+++ b/app/src/main/res/layout/layout_upload_shop_details.xml
@@ -1,35 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/dp16"
-    android:orientation="horizontal"
-    android:weightSum="2"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/textView_doc_upload"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableTop="@drawable/ic_upload_white"
-            android:gravity="center"
-            android:text="Verification Doc" />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/list_view_doc"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1">
+        android:layout_marginTop="@dimen/dp16"
+        android:orientation="horizontal"
+        android:weightSum="2">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -38,17 +15,45 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/text_view_picture_upload"
+                android:id="@+id/textView_doc_upload"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableTop="@drawable/ic_upload_white"
                 android:gravity="center"
-                android:text="Shop Picture" />
+                android:text="Verification Doc"
+                android:onClick="uploadDocuments"/>
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/list_view_picture"
+                android:id="@+id/list_view_doc"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/text_view_picture_upload"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableTop="@drawable/ic_upload_white"
+                    android:gravity="center"
+                    android:text="Shop Picture"
+                    android:onClick="uploadPictures"/>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/list_view_picture"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</layout>
