--- a/app/src/main/res/layout/product_detail_row.xml
+++ b/app/src/main/res/layout/product_detail_row.xml
@@ -1,52 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:cardBackgroundColor="@color/colorWhite"
-    android:layout_marginTop="@dimen/dp5"
-    app:cardCornerRadius="@dimen/cardview_default_radius"
-    app:cardElevation="@dimen/cardview_default_elavation">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="1"
-        android:padding="@dimen/dp10">
-
-        <ImageView
-            android:id="@+id/product_item_image"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/dp100"
-            android:layout_weight="0.3" />
+        android:layout_marginTop="@dimen/dp5"
+        app:cardBackgroundColor="@color/colorWhite"
+        app:cardCornerRadius="@dimen/cardview_default_radius"
+        app:cardElevation="@dimen/cardview_default_elavation">
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.7"
-            android:orientation="vertical"
-            android:layout_marginStart="@dimen/dp5">
+            android:orientation="horizontal"
+            android:padding="@dimen/dp10"
+            android:weightSum="1">
 
-            <TextView
-                android:id="@+id/product_details"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:theme="@style/AppTheme.Normal" />
+            <ImageView
+                android:id="@+id/product_item_image"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/dp100"
+                android:layout_weight="0.3" />
 
-            <TextView
-                android:id="@+id/product_price_details"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:theme="@style/AppTheme.Normal" />
+                android:layout_marginStart="@dimen/dp5"
+                android:layout_weight="0.7"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/product_message"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:theme="@style/AppTheme.Normal" />
+                <TextView
+                    android:id="@+id/product_details"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:theme="@style/AppTheme.Normal" />
+
+                <TextView
+                    android:id="@+id/product_price_details"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:theme="@style/AppTheme.Normal" />
+
+                <TextView
+                    android:id="@+id/product_message"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:theme="@style/AppTheme.Normal" />
+            </LinearLayout>
+
         </LinearLayout>
 
-    </LinearLayout>
-
-</android.support.v7.widget.CardView>
+    </android.support.v7.widget.CardView>
+</layout>
