--- a/app/src/main/res/layout/shop_pictures_item_row.xml
+++ b/app/src/main/res/layout/shop_pictures_item_row.xml
@@ -1,37 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/dp16"
-    android:padding="@dimen/dp5">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ImageView
-        android:id="@+id/image_view_shop_picture"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:scaleType="fitXY"
-        android:background="@drawable/flower_image_frame"
-        android:padding="@dimen/dp2"/>
-
-    <ImageView
-        android:id="@+id/image_view_selected"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end|top"
-        android:src="@drawable/ic_check_24dp"
-        android:layout_margin="@dimen/dp2"
-        android:visibility="gone"/>
+        android:layout_marginTop="@dimen/dp16"
+        android:padding="@dimen/dp5">
 
-    <TextView
-        android:id="@+id/text_view_picture_upload"
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:scaleType="fitXY"
-        android:text="@string/btn_upload_pictures"
-        android:gravity="center"
-        android:background="@drawable/flower_image_frame"
-        android:visibility="gone"
-        android:textStyle="bold"
-        android:textColor="@color/colorWhite"/>
+        <ImageView
+            android:id="@+id/image_view_shop_picture"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:background="@drawable/flower_image_frame"
+            android:padding="@dimen/dp2"
+            android:scaleType="fitXY" />
 
-</FrameLayout>
+        <ImageView
+            android:id="@+id/image_view_selected"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|top"
+            android:layout_margin="@dimen/dp2"
+            android:src="@drawable/ic_check_24dp"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/text_view_picture_upload"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:background="@drawable/flower_image_frame"
+            android:gravity="center"
+            android:scaleType="fitXY"
+            android:text="@string/btn_upload_pictures"
+            android:textColor="@color/colorWhite"
+            android:textStyle="bold"
+            android:visibility="gone" />
+
+    </FrameLayout>
+</layout>
