--- a/app/src/main/res/layout/upload_data_row.xml
+++ b/app/src/main/res/layout/upload_data_row.xml
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:weightSum="1"
-    android:padding="@dimen/dp16">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:id="@+id/text_view_data"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.9"
-        android:layout_gravity="center_vertical"/>
+        android:orientation="horizontal"
+        android:padding="@dimen/dp16"
+        android:weightSum="1">
 
-    <ImageView
-        android:id="@+id/image_view_close"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.1"
-        android:src="@drawable/ic_close_white_24dp"
-        android:layout_gravity="center_vertical"/>
+        <TextView
+            android:id="@+id/text_view_data"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="0.9" />
 
-</LinearLayout>
+        <ImageView
+            android:id="@+id/image_view_close"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="0.1"
+            android:src="@drawable/ic_close_white_24dp" />
+
+    </LinearLayout>
+</layout>
