Ripple feature added.

--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -65,13 +65,20 @@
 
             </android.support.design.widget.TextInputLayout>
 
-            <Button
+            <com.andexert.library.RippleView
                 android:id="@+id/btn_reset_password"
+                rv_centered="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp16"
-                android:background="@drawable/button_transparent"
-                android:text="@string/lbl_reset_password"/>
+                android:background="@drawable/rounded_corner_nofill">
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
+                    android:text="@string/lbl_reset_password" />
+            </com.andexert.library.RippleView>
 
         </LinearLayout>
     </ScrollView>
