--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -65,14 +65,20 @@
                         android:id="@+id/lt_upload_shop_details"
                         layout="@layout/layout_upload_shop_details" />
 
-                    <Button
+                    <com.andexert.library.RippleView
                         android:id="@+id/btn_register"
+                        rv_centered="true"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/dp16"
-                        android:background="@drawable/button_transparent"
-                        android:text="@string/lbl_register"
-                        android:onClick="registerSelected"/>
+                        android:background="@drawable/rounded_corner_nofill">
+
+                        <Button
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@android:color/transparent"
+                            android:text="@string/lbl_register" />
+                    </com.andexert.library.RippleView>
 
                 </LinearLayout>
             </android.support.v4.widget.NestedScrollView>
