--- a/app/src/main/res/layout/fragment_shop_pictures.xml
+++ b/app/src/main/res/layout/fragment_shop_pictures.xml
@@ -7,15 +7,21 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <ImageView
+        <com.andexert.library.RippleView
             android:id="@+id/image_view_delete"
+            rv_centered="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="@dimen/dp16"
             android:layout_marginTop="@dimen/dp16"
-            android:src="@drawable/ic_delete_white_24dp"
-            android:visibility="gone"/>
+            android:visibility="gone">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_delete_white_24dp" />
+        </com.andexert.library.RippleView>
 
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/swipe_refresh_layout"
