--- a/app/src/main/res/layout/fragment_update_profile.xml
+++ b/app/src/main/res/layout/fragment_update_profile.xml
@@ -30,25 +30,37 @@
                     android:orientation="horizontal"
                     android:weightSum="2">
 
-                    <Button
+                    <com.andexert.library.RippleView
                         android:id="@+id/btn_update"
+                        rv_centered="true"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="@dimen/dp10"
                         android:layout_weight="1"
-                        android:background="@drawable/button_transparent"
-                        android:onClick="onClickUpdate"
-                        android:text="@string/lbl_update" />
+                        android:background="@drawable/rounded_corner_nofill">
 
-                    <Button
+                        <Button
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@android:color/transparent"
+                            android:text="@string/lbl_update" />
+                    </com.andexert.library.RippleView>
+
+                    <com.andexert.library.RippleView
                         android:id="@+id/btn_cancel"
+                        rv_centered="true"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/dp10"
                         android:layout_weight="1"
-                        android:background="@drawable/button_transparent"
-                        android:onClick="onClickCancel"
-                        android:text="@string/lbl_cancel" />
+                        android:background="@drawable/rounded_corner_nofill">
+
+                        <Button
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@android:color/transparent"
+                            android:text="@string/lbl_cancel" />
+                    </com.andexert.library.RippleView>
 
                 </LinearLayout>
 
