--- a/app/src/main/res/layout/fragment_view_pager.xml
+++ b/app/src/main/res/layout/fragment_view_pager.xml
@@ -12,6 +12,7 @@
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:tabBackground="?attr/selectableItemBackground"
             app:tabGravity="center"
             app:tabIndicatorColor="@color/colorPrimary"
             app:tabMode="fixed"
