--- a/app/src/main/res/layout/layout_login.xml
+++ b/app/src/main/res/layout/layout_login.xml
@@ -42,24 +42,34 @@
 
         </android.support.design.widget.TextInputLayout>
 
-        <Button
+        <com.andexert.library.RippleView
             android:id="@+id/btn_login"
+            rv_centered="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp32"
-            android:background="@drawable/button_transparent"
-            android:onClick="loginSelected"
-            android:text="@string/lbl_login" />
+            android:layout_marginTop="@dimen/dp32">
 
-        <TextView
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rounded_corner_nofill"
+                android:text="@string/lbl_login" />
+        </com.andexert.library.RippleView>
+
+        <com.andexert.library.RippleView
             android:id="@+id/textview_forgot_password"
-            style="@style/AppTheme.Label"
-            android:layout_width="match_parent"
+            rv_centered="true"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp16"
-            android:gravity="center"
-            android:onClick="forgotPasswordSelected"
-            android:text="@string/lbl_forgot_password" />
+            android:layout_marginTop="@dimen/dp16">
+
+            <TextView
+                style="@style/AppTheme.Label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/lbl_forgot_password" />
+        </com.andexert.library.RippleView>
 
     </LinearLayout>
 </layout>
