--- a/app/src/main/res/layout/layout_upload_shop_details.xml
+++ b/app/src/main/res/layout/layout_upload_shop_details.xml
@@ -14,14 +14,19 @@
             android:layout_weight="1"
             android:orientation="vertical">
 
-            <TextView
+            <com.andexert.library.RippleView
                 android:id="@+id/textView_doc_upload"
+                rv_centered="true"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawableTop="@drawable/ic_upload_white"
-                android:gravity="center"
-                android:text="Verification Doc"
-                android:onClick="uploadDocuments"/>
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableTop="@drawable/ic_upload_white"
+                    android:gravity="center"
+                    android:text="Verification Doc" />
+            </com.andexert.library.RippleView>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/list_view_doc"
@@ -40,14 +45,19 @@
                 android:layout_weight="1"
                 android:orientation="vertical">
 
-                <TextView
+                <com.andexert.library.RippleView
                     android:id="@+id/text_view_picture_upload"
+                    rv_centered="true"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:drawableTop="@drawable/ic_upload_white"
-                    android:gravity="center"
-                    android:text="Shop Picture"
-                    android:onClick="uploadPictures"/>
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:drawableTop="@drawable/ic_upload_white"
+                        android:gravity="center"
+                        android:text="Shop Picture" />
+                </com.andexert.library.RippleView>
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/list_view_picture"
