--- a/app/src/main/res/layout/order_item_row.xml
+++ b/app/src/main/res/layout/order_item_row.xml
@@ -14,22 +14,31 @@
     </data>
 
     <android.support.v7.widget.CardView
+        android:id="@+id/order_detail_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/dp5"
         android:layout_marginEnd="@dimen/dp10"
         android:layout_marginLeft="@dimen/dp10"
         android:layout_marginRight="@dimen/dp10"
         android:layout_marginStart="@dimen/dp10"
         android:layout_marginTop="@dimen/dp10"
-        app:cardBackgroundColor="@color/colorWhite">
+        android:background="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
+        app:cardBackgroundColor="@color/colorWhite"
+        app:cardCornerRadius="@dimen/cardview_default_corner_radius"
+        app:cardElevation="1dp"
+        app:cardPreventCornerOverlap="false"
+        app:contentPadding="@dimen/dp5">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+
             <LinearLayout
-                android:id="@+id/order_detail_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -149,31 +158,36 @@
                 android:orientation="horizontal"
                 android:weightSum="2">
 
-                <RelativeLayout
+                <com.andexert.library.RippleView
                     android:id="@+id/order_map_details"
                     android:layout_width="0dp"
                     android:layout_height="?android:attr/actionBarSize"
                     android:layout_weight="1"
                     android:background="@android:color/holo_blue_light">
 
-                    <TextView
-                        android:id="@+id/tv_view_on_map"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:paddingStart="@dimen/dp5"
-                        android:text="@string/btn_view_on_map"
-                        android:textStyle="bold" />
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_toStartOf="@id/tv_view_on_map"
-                        android:src="@drawable/ic_map_white_24dp" />
-                </RelativeLayout>
+                        <TextView
+                            android:id="@+id/tv_view_on_map"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:paddingStart="@dimen/dp5"
+                            android:text="@string/btn_view_on_map"
+                            android:textStyle="bold" />
 
-                <RelativeLayout
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_toStartOf="@id/tv_view_on_map"
+                            android:src="@drawable/ic_map_white_24dp" />
+                    </RelativeLayout>
+                </com.andexert.library.RippleView>
+
+                <com.andexert.library.RippleView
                     android:id="@+id/order_status"
                     android:layout_width="0dp"
                     android:layout_height="?android:attr/actionBarSize"
@@ -181,22 +195,28 @@
                     android:layout_weight="1"
                     android:background="@color/colorPrimary">
 
-                    <TextView
-                        android:id="@+id/tv_status"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:paddingStart="@dimen/dp5"
-                        android:text="@string/lbl_status_delivered"
-                        android:textStyle="bold" />
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_toStartOf="@id/tv_status"
-                        android:src="@drawable/ic_status_white_24dp" />
-                </RelativeLayout>
+                        <TextView
+                            android:id="@+id/tv_status"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:paddingStart="@dimen/dp5"
+                            android:text="@string/lbl_status_delivered"
+                            android:textStyle="bold" />
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_toStartOf="@id/tv_status"
+                            android:src="@drawable/ic_status_white_24dp" />
+                    </RelativeLayout>
+
+                </com.andexert.library.RippleView>
 
             </LinearLayout>
 
