--- a/app/src/main/res/layout/layout_order_details.xml
+++ b/app/src/main/res/layout/layout_order_details.xml
@@ -128,7 +128,8 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_map_black" />
+                    android:src="@drawable/ic_map_black"
+                    android:contentDescription="@string/content_description" />
             </com.andexert.library.RippleView>
         </LinearLayout>
 
@@ -161,7 +162,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="center_vertical" />
+                android:gravity="center_vertical"
+                android:text="@{String.valueOf(orderdetails.isScheduledDelivery)}" />
 
         </LinearLayout>
 
